# tidb

./: .dockerignore  .gitignore  DEPS.bzl  Dockerfile  Makefile.common  errors.toml  go.mod  go.sum
bindinfo/: handle.go
br/: Dockerfile
config/: BUILD.bazel  config.go  config.toml.example  ratelimit.go  tenant.go
ddl/: BUILD.bazel  attributes_sql_test.go  ddl.go  ddl_api.go  ddl_tiflash_api.go  ddl_worker.go  main_test.go  resource_group.go  resource_group_test.go  table.go
distsql/: request_builder.go
domain/: BUILD.bazel  db_test.go  domain.go  user_prefix.go
errno/: errcode.go  errname.go
executor/: BUILD.bazel  adapter.go  analyze.go  analyze_fast.go  batch_point_get.go  builder.go  compiler.go  ddl.go  errors.go  grant.go  metrics.go  point_get.go  revoke.go  simple.go
expression/: builtin_info.go  integration_test.go
infoschema/: BUILD.bazel  builder.go  cache.go  error.go  infoschema.go  metrics.go  metrics_schema.go
keyspace/: BUILD.bazel  keyspace.go  ratelimit.go
kv/: kv.go  option.go
meta/: meta.go
metrics/: BUILD.bazel  bindinfo.go  ddl.go  distsql.go  domain.go  executor.go  gc_worker.go  log_backup.go  meta.go  metrics.go  metrics_test.go  owner.go  server.go  serverless.go  session.go  sli.go  stats.go  topsql.go
parser/: misc.go  parser.y  parser_test.go
privilege/: privilege.go
server/: BUILD.bazel  conn.go  http_status.go  main_test.go  metrics.go  server.go  stat_test.go
session/: BUILD.bazel  bootstrap.go  bootstrap_serverless.go  devtier.go  metrics.go  session.go
standby/: BUILD.bazel  idle_watcher.go  standby.go
(+78 files in other folders)
