load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "standby",
    srcs = [
        "idle_watcher.go",
        "standby.go",
    ],
    importpath = "github.com/pingcap/tidb/standby",
    visibility = ["//visibility:public"],
    deps = [
        "//util/logutil",
        "@org_uber_go_zap//:zap",
    ],
)
